prod-cluster/mtls/secondapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      volumes:
        - name: payment-service-certs
          secret:
            secretName: payment-service-tls
        - name: ca-certs
          secret:
            secretName: my-root-ca  # Trust Order Service's certificate
      containers:
        - name: payment-service
          image: us-central1-docker.pkg.dev/vamsi-krishna-sandbox/gke-prod/image:10
          ports:
            - containerPort: 4000
          volumeMounts:
            - mountPath: "/etc/payment-service"
              name: payment-service-certs
              readOnly: true
            - mountPath: "/etc/ca"
              name: ca-certs
              readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: prod
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 443
      targetPort: 4000
