prod-cluster/mtls/ingress-for-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: mtls-letsencrypt-issuer
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: mtls-ip
  name: mtls-prod-ingress
  namespace: prod
spec:
  ingressClassName: gce
  rules:
  - host: mtls.ioinfo.shop
    http:
      paths:
      - backend:
          service:
            name: order-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - mtls.ioinfo.shop
    secretName: mtls-prod-secret
